Improvements to previous commit

--- a/Presentation/mobSocial.WebApp/index.html
+++ b/Presentation/mobSocial.WebApp/index.html
@@ -15,11 +15,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <!-- jvectormap -->
     <link rel="stylesheet" href="plugins/jvectormap/jquery-jvectormap-1.2.2.css">
+    <!-- iCheck -->
+    <link rel="stylesheet" href="plugins/iCheck/square/blue.css">
+
     <!-- Theme style -->
     <link rel="stylesheet" href="themes/admin/AdminLTE/css/AdminLTE.min.css">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="themes/admin/AdminLTE/css/skins/_all-skins.min.css">
+    <link rel="stylesheet" href="themes/admin/AdminLTE/css/overrides.min.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -28,11 +32,8 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body class="hold-transition skin-blue sidebar-mini">
-<div class="wrapper">
+<body class="hold-transition skin-blue">
     <div ui-view></div>
-</div>
-<!-- ./wrapper -->
 
 <!-- jQuery 2.2.3 -->
 <script src="libraries/jQuery/jquery-2.2.3.min.js"></script>
@@ -51,9 +52,11 @@
 <script src="plugins/slimScroll/jquery.slimscroll.min.js"></script>
 <!-- ChartJS 1.0.1 -->
 <script src="plugins/chartjs/Chart.min.js"></script>
-
-<!--mobSocial begins now-->
+<!-- iCheck -->
+<script src="plugins/iCheck/icheck.min.js"></script>
+    <!--mobSocial begins now-->
 <script src="bundle.js"></script>
 
+<script src="themes/admin/AdminLTE/js/functions.js"></script>
 </body>
 </html>
