--- a/Presentation/mobSocial.WebApp/pages/users/users.list.html
+++ b/Presentation/mobSocial.WebApp/pages/users/users.list.html
@@ -13,6 +13,9 @@
         <h1 class="box-title">
             Manage Users
         </h1>
+        <div class="pull-right">
+            <a ui-sref="layoutDashboard.useredit.basic({ id:0 })" class="btn btn-primary"><i class="fa fa-plus"></i> Add User</a>
+        </div>
     </div>
     <div class="box-body no-padding">
         <div class="table-responsive">
@@ -25,7 +28,7 @@
                 </tr>
                 <tr ng-repeat="user in users">
                     <td>
-                        <a ui-sref="layoutDashboard.useredit({ id: user.Id })">
+                        <a ui-sref="layoutDashboard.useredit.basic({ id: user.Id })">
                             <img ng-src="{{user.ProfileImageUrl}}" class="img-circle" /> {{user.Name}}
                         </a>
                     </td>
