select2 support added

--- a/Presentation/mobSocial.WebApp/index.html
+++ b/Presentation/mobSocial.WebApp/index.html
@@ -17,8 +17,10 @@
     <link rel="stylesheet" href="plugins/jvectormap/jquery-jvectormap-1.2.2.css">
     <!-- iCheck -->
     <link rel="stylesheet" href="plugins/iCheck/square/blue.css">
-    <!-- iCheck -->
+    <!-- pace -->
     <link rel="stylesheet" href="plugins/pace/pace.min.css">
+    <!-- select2 -->
+    <link rel="stylesheet" href="plugins/select2/select2.min.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="themes/admin/AdminLTE/css/AdminLTE.min.css">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
@@ -55,8 +57,10 @@
     <script src="plugins/chartjs/Chart.min.js"></script>
     <!-- iCheck -->
     <script src="plugins/iCheck/icheck.min.js"></script>
-    <!-- iCheck -->
+    <!-- pace -->
     <script src="plugins/pace/pace.min.js"></script>
+    <!-- select2-->
+    <script src="plugins/select2/select2.min.js"></script>
     <!--mobSocial begins now-->
     <script src="bundle.js"></script>
 
