--- a/Presentation/mobSocial.WebApp/pages/users/user.edit.basic.html
+++ b/Presentation/mobSocial.WebApp/pages/users/user.edit.basic.html
@@ -20,6 +20,15 @@
                 </div>
             </div>
             <div class="form-group">
+                <label for="roles" class="col-md-2 control-label">Roles</label>
+                <div class="col-md-10">
+                    <select id="roles" class="select2 form-control" multiple="multiple">
+                        <option>Administrator</option>
+                        <option>Agent</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
                 <label for="email" class="col-md-2 control-label">Email address</label>
                 <div class="col-md-10">
                     <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="user.Email">
