Displayed notification for user editor operation

--- a/Presentation/mobSocial.WebApp/pages/users/user.edit.basic.html
+++ b/Presentation/mobSocial.WebApp/pages/users/user.edit.basic.html
@@ -1,6 +1,7 @@
 ﻿<form role="form" class="form-horizontal">
     <fieldset>
         <div class="box-body">
+            <span ng-bind-html="_Notifications('post_user') "></span>
             <div class="form-group">
                 <label for="firstName" class="col-md-2 control-label">First Name</label>
                 <div class="col-md-10">
