--- a/Presentation/mobSocial.WebApp/pages/users/user.edit.html
+++ b/Presentation/mobSocial.WebApp/pages/users/user.edit.html
@@ -1,16 +1,15 @@
 ﻿<div class="box">
     <div class="box-header with-border">
         <h1 class="box-title">
-            Edit User
+            Edit User - {{user.Name}}
         </h1>
     </div>
     <div class="box-body no-padding">
         <!-- Custom Tabs -->
         <div class="nav-tabs-custom">
             <ul class="nav nav-tabs">
-                <li ui-sref-active="active"><a ui-sref="layoutDashboard.useredit.basic">Basic Details</a></li>
-                <li ui-sref-active="active"><a ui-sref="layoutDashboard.useredit.roles">Roles</a></li>
-                <li ui-sref-active="active"><a ui-sref="layoutDashboard.useredit.timeline">Timeline</a></li>
+                <li ui-sref-active="active"><a ui-sref="layoutDashboard.useredit.basic" ui-sref-opts="{reload: true}">Basic Details</a></li>
+                <li ui-sref-active="active"><a ui-sref="layoutDashboard.useredit.timeline" ui-sref-opts="{reload: true}">Timeline</a></li>
             </ul>
             <div class="tab-content">
                 <div class="tab-pane active">
