--- a/Presentation/mobSocial.WebApp/pages/login.html
+++ b/Presentation/mobSocial.WebApp/pages/login.html
@@ -5,6 +5,7 @@
     <!-- /.login-logo -->
     <div class="login-box-body">
         <p class="login-box-msg">Sign in to start your session</p>
+        <span ng-bind-html="_Notifications('login') "></span>
         <form action="" method="post">
             <div class="form-group has-feedback">
                 <input type="email" class="form-control" placeholder="Email" ng-model="dataModel.Email">
