bootbox plugin added to replace existing alert, confirm dialogs

--- a/Presentation/mobSocial.WebApp/index.html
+++ b/Presentation/mobSocial.WebApp/index.html
@@ -61,6 +61,8 @@
     <script src="plugins/pace/pace.min.js"></script>
     <!-- select2-->
     <script src="plugins/select2/select2.min.js"></script>
+    <!-- bootbox-->
+    <script src="plugins/bootbox/bootbox.min.js"></script>
     <!--mobSocial begins now-->
     <script src="bundle.js"></script>
 
