--- a/Presentation/mobSocial.WebApp/pages/users/user.edit.html
+++ b/Presentation/mobSocial.WebApp/pages/users/user.edit.html
@@ -1,8 +1,11 @@
 ﻿<div class="box">
     <div class="box-header with-border">
         <h1 class="box-title">
-            Edit User - {{user.Name}}
+            Edit User - {{user.Name}} <small><a ui-sref="layoutDashboard.userlist" ui-sref-opts="{reload: true}"> <i class="fa fa fa-arrow-circle-left"></i> back to user list</a></small>
         </h1>
+        <div class="pull-right">
+            <a class="btn btn-danger btn-block" ng-click="delete()"><i class="fa fa-times"></i> Delete</a>
+        </div>
     </div>
     <div class="box-body no-padding">
         <!-- Custom Tabs -->
@@ -10,6 +13,7 @@
             <ul class="nav nav-tabs">
                 <li ui-sref-active="active"><a ui-sref="layoutDashboard.useredit.basic" ui-sref-opts="{reload: true}">Basic Details</a></li>
                 <li ui-sref-active="active"><a ui-sref="layoutDashboard.useredit.timeline" ui-sref-opts="{reload: true}">Timeline</a></li>
+                
             </ul>
             <div class="tab-content">
                 <div class="tab-pane active">
