user list page displays last login using moment

--- a/Presentation/mobSocial.WebApp/pages/users/users.list.html
+++ b/Presentation/mobSocial.WebApp/pages/users/users.list.html
@@ -33,7 +33,7 @@
                         </a>
                     </td>
                     <td>
-                       
+                        <i class="fa fa-clock"></i> <time am-time-ago="user.LastLoginDateLocal"></time>
                     </td>
                     <td>
                         <span class="badge" ng-class="{'bg-green' : user.Active, 'bg-red': !user.Active}">{{user.Active ? "Active" : "Not Active"}}</span>
