User interaction blocked while ajax in progress

--- a/Presentation/mobSocial.WebApp/pages/settings/securitySettings.edit.html
+++ b/Presentation/mobSocial.WebApp/pages/settings/securitySettings.edit.html
@@ -6,7 +6,7 @@
     </div>
     <div class="box-body no-padding">
         <form role="form" name="formSettingEditor" class="form-horizontal">
-            <fieldset>
+            <fieldset  block-ui>
                 <div class="box-body">
                     <span ng-bind-html="_Notifications('post_setting') "></span>                   
                     <div class="form-group">
