--- a/Presentation/mobSocial.WebApp/pages/users/user.edit.basic.html
+++ b/Presentation/mobSocial.WebApp/pages/users/user.edit.basic.html
@@ -1,5 +1,5 @@
 ﻿<form role="form" name="formUserEditor" class="form-horizontal">
-    <fieldset>
+    <fieldset block-ui>
         <div class="box-body">
             <span ng-bind-html="_Notifications('post_user') "></span>
             <div class="form-group">
