--- a/Presentation/mobSocial.WebApp/pages/login.html
+++ b/Presentation/mobSocial.WebApp/pages/login.html
@@ -3,32 +3,35 @@
         <a href="/"><b>mob</b>Social</a>
     </div>
     <!-- /.login-logo -->
-    <div class="login-box-body">
+    <div class="login-box-body" block-ui>
         <p class="login-box-msg">Sign in to start your session</p>
         <span ng-bind-html="_Notifications('login') "></span>
         <form action="" method="post">
-            <div class="form-group has-feedback">
-                <input type="email" class="form-control" placeholder="Email" ng-model="dataModel.Email">
-                <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
-            </div>
-            <div class="form-group has-feedback">
-                <input type="password" class="form-control" placeholder="Password" ng-model="dataModel.Password">
-                <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-            </div>
-            <div class="row">
-                <div class="col-xs-8">
-                    <div class="checkbox icheck">
-                        <label>
-                            <input class="icheck" type="checkbox" ng-model="dataModel.Persist"> Remember Me
-                        </label>
+            <fieldset>
+                <div class="form-group has-feedback">
+                    <input type="email" class="form-control" placeholder="Email" ng-model="dataModel.Email">
+                    <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+                </div>
+                <div class="form-group has-feedback">
+                    <input type="password" class="form-control" placeholder="Password" ng-model="dataModel.Password">
+                    <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                </div>
+                <div class="row">
+                    <div class="col-xs-8">
+                        <div class="checkbox icheck">
+                            <label>
+                                <input class="icheck" type="checkbox" ng-model="dataModel.Persist"> Remember Me
+                            </label>
+                        </div>
                     </div>
+                    <!-- /.col -->
+                    <div class="col-xs-4">
+                        <button type="button" class="btn btn-primary btn-block btn-flat" ng-click="login()">Sign In</button>
+                    </div>
+                    <!-- /.col -->
                 </div>
-                <!-- /.col -->
-                <div class="col-xs-4">
-                    <button type="button" class="btn btn-primary btn-block btn-flat" ng-click="login()">Sign In</button>
-                </div>
-                <!-- /.col -->
-            </div>
+            </fieldset>
+
         </form>
         <!-- /.social-auth-links -->
         <a href="#">I forgot my password</a><br>
