renamed layoutdashboard to layoutadministration for correct identification of administration area layout

--- a/Presentation/mobSocial.WebApp/pages/users/user.edit.basic.html
+++ b/Presentation/mobSocial.WebApp/pages/users/user.edit.basic.html
@@ -72,7 +72,7 @@
             <div class="form-group">
                 <div class="col-md-10 col-md-offset-2">
                     <button type="button" class="btn btn-primary" ng-click="save()">Save</button>
-                    <button type="button" class="btn btn-secondary" ui-sref="layoutDashboard.userlist" ui-sref-opts="{reload: true}">Cancel</button>
+                    <button type="button" class="btn btn-secondary" ui-sref="layoutAdministration.userlist" ui-sref-opts="{reload: true}">Cancel</button>
                 </div>
             </div>
         </div>
