--- a/Presentation/mobSocial.WebApp/pages/login.html
+++ b/Presentation/mobSocial.WebApp/pages/login.html
@@ -1,4 +1,4 @@
-﻿<div class="login-box" ng-controller="loginController" ng-init="init()">
+﻿<div class="login-box">
     <div class="login-logo">
         <a href="/"><b>mob</b>Social</a>
     </div>
