--- a/Presentation/mobSocial.WebApp/pages/login.html
+++ b/Presentation/mobSocial.WebApp/pages/login.html
@@ -26,7 +26,7 @@
                     </div>
                     <!-- /.col -->
                     <div class="col-xs-4">
-                        <button type="button" class="btn btn-primary btn-block btn-flat" ng-click="login()">Sign In</button>
+                        <button type="submit" class="btn btn-primary btn-block btn-flat" ng-click="login()">Sign In</button>
                     </div>
                     <!-- /.col -->
                 </div>
