--- a/Presentation/mobSocial.WebApp/pages/users/activity.html
+++ b/Presentation/mobSocial.WebApp/pages/users/activity.html
@@ -1,22 +1,23 @@
 ﻿<div class="row">
-    <div class="col-md-3">
+    <div class="col-md-3" ng-controller="userProfileController" ng-init="init(CurrentUser.Id)">
         <!-- Profile Image -->
         <div class="box box-primary">
             <div class="box-body box-profile">
-                <img class="profile-user-img img-responsive img-circle" ng-src="{{CurrentUser.ProfileImageUrl}}" alt="User profile picture">
-                <h3 class="profile-username text-center">{{CurrentUser.Name}}</h3>
+                <img class="profile-user-img img-responsive img-circle" ng-src="{{user.ProfileImageUrl}}" alt="User profile picture">
+                <h3 class="profile-username text-center">{{user.Name}}</h3>
                 <ul class="list-group list-group-unbordered">
                     <li class="list-group-item">
-                        <b>Followers</b> <a class="pull-right">1,322</a>
+                        <b>Followers</b> <a class="pull-right">{{user.FollowerCount}}</a>
                     </li>
                     <li class="list-group-item">
-                        <b>Following</b> <a class="pull-right">543</a>
+                        <b>Following</b> <a class="pull-right">{{user.FollowingCount}}</a>
                     </li>
                     <li class="list-group-item">
-                        <b>Friends</b> <a class="pull-right">13,287</a>
+                        <b>Friends</b> <a class="pull-right">{{user.FriendCount}}</a>
                     </li>
                 </ul>
-                <a href="#" class="btn btn-primary btn-block"><b>Follow</b></a>
+                <friend-button class="friend-button" friendstatus="user.FriendStatus" customerid="user.Id"></friend-button>
+                <follow-button class="follow-button" followstatus="user.FollowStatus" entityname="user" entityid="{{user.Id}}" canfollow="{{user.CanFollow}}"></follow-button>
             </div>
             <!-- /.box-body -->
         </div>
@@ -55,7 +56,7 @@
     <!-- /.col -->
     <div class="col-md-9">
         <div class="box ">
-            <div class="box-body  no-padding activity-list">
+            <div class="box-body  no-padding activity-list" ng-controller="timelineController">
                 <div class="post post-form">
                     <div class="user-block row">
                         <div class="col-xs-1">
