views cloaked to avoid flickering during ajax loading

--- a/Presentation/mobSocial.WebApp/index.html
+++ b/Presentation/mobSocial.WebApp/index.html
@@ -35,7 +35,7 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body class="hold-transition skin-blue" ng-class="{'layout-top-nav': !isAdministrationArea}">
+<body class="hold-transition skin-blue" ng-class="{'layout-top-nav': !isAdministrationArea}" ng-cloak>
     <div ui-view></div>
 
     <!-- jQuery 2.2.3 -->
