--- a/Presentation/mobSocial.WebApp/pages/users/user.profile.html
+++ b/Presentation/mobSocial.WebApp/pages/users/user.profile.html
@@ -66,7 +66,7 @@
                         </div>
 
                     </div>
-                    <div class="cover-upload-area" ng-if="!isCurrentUser(user.Id)">
+                    <div class="cover-upload-area" ng-if="currentUserIs(user.Id)">
                         <div ng-show="!user.TemporaryCover">
                             <a file-upload-button
                                class="upload-button"
