implemented user profile friends, followers and following pages and ui fixes

--- a/Presentation/mobSocial.WebApp/pages/users/user.profile.followers.html
+++ b/Presentation/mobSocial.WebApp/pages/users/user.profile.followers.html
@@ -1,1 +1,5 @@
-﻿
+﻿<div class="row" ng-controller="followController" ng-init="getFollowers()">
+    <div class="col-md-4" ng-repeat="u in followers">
+        <user-profile-mini user="u"></user-profile-mini>
+    </div>
+</div>
