--- a/Presentation/mobSocial.WebApp/pages/users/user.profile.following.html
+++ b/Presentation/mobSocial.WebApp/pages/users/user.profile.following.html
@@ -1,1 +1,5 @@
-﻿
+﻿<div class="row" ng-controller="followController" ng-init="getFollowing()">
+    <div class="col-md-4" ng-repeat="u in following">
+        <user-profile-mini user="u"></user-profile-mini>
+    </div>
+</div>
