--- a/Presentation/mobSocial.WebApp/pages/users/user.profile.friends.html
+++ b/Presentation/mobSocial.WebApp/pages/users/user.profile.friends.html
@@ -1,1 +1,5 @@
-﻿
+﻿<div class="row" ng-controller="friendController" ng-init="getFriends()">
+    <div class="col-md-4" ng-repeat="u in friends">
+        <user-profile-mini user="u"></user-profile-mini>
+    </div>
+</div>
