--- a/Presentation/mobSocial.WebApp/pages/users/user.profile.following.html
+++ b/Presentation/mobSocial.WebApp/pages/users/user.profile.following.html
@@ -2,4 +2,11 @@
     <div class="col-md-4" ng-repeat="u in following">
         <user-profile-mini user="u"></user-profile-mini>
     </div>
+    <div ng-if="following && following.length == 0">
+        <div class="col-xs-12">
+            <div class="alert alert-danger">
+                No visible followings found
+            </div>
+        </div>
+    </div>
 </div>
