--- a/Presentation/mobSocial.WebApp/pages/users/activity.html
+++ b/Presentation/mobSocial.WebApp/pages/users/activity.html
@@ -1,11 +1,11 @@
 ﻿<!-- Content Wrapper. Contains page content -->
-<div class="content-wrapper no-margin">
+<div class="content-wrapper no-margin" ng-controller="userProfileController" ng-init="init(CurrentUser.Id)">
     <div class="container">
         <!-- Main content -->
         <section class="content">
             <div id="main-content">
                 <div class="row">
-                    <div class="col-md-3" ng-controller="userProfileController" ng-init="init(CurrentUser.Id)">
+                    <div class="col-md-3">
                         <!-- Profile Image -->
                         <div class="box box-primary">
                             <div class="box-body box-profile">
