--- a/Presentation/mobSocial.WebApp/pages/users/user.profile.html
+++ b/Presentation/mobSocial.WebApp/pages/users/user.profile.html
@@ -30,7 +30,7 @@
                         </span>
                     </div>
                     <div class="quick-info">
-                        <div class="container">
+                        <div class="container-fluid">
                             <div class="row">
                                 <div class="col-md-2 info-block">
                                     <i class="fa fa-users margin-r-5"></i>
@@ -96,7 +96,7 @@
 
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper no-margin">
-        <div class="container">
+        <div class="container-fluid">
             <!-- Main content -->
             <section class="content">
                 <div id="main-content">
