--- a/Presentation/mobSocial.WebApp/pages/users/user.edit.basic.html
+++ b/Presentation/mobSocial.WebApp/pages/users/user.edit.basic.html
@@ -71,7 +71,7 @@
             </div>
             <div class="form-group">
                 <div class="col-md-10 col-md-offset-2">
-                    <button type="button" class="btn btn-primary" ng-click="save()">Save</button>
+                    <button type="button" class="btn btn-primary" ng-click="saveFull()">Save</button>
                     <button type="button" class="btn btn-secondary" ui-sref="layoutAdministration.users.list" ui-sref-opts="{reload: true}">Cancel</button>
                 </div>
             </div>
