--- a/Presentation/mobSocial.WebApp/pages/users/user.profile.html
+++ b/Presentation/mobSocial.WebApp/pages/users/user.profile.html
@@ -56,7 +56,7 @@
 
                                 </div>
                                 <div class="col-md-4">
-                                    <a class="btn btn-default pull-right" ng-if="currentUserIs(user.Id)"><i class="fa fa-pencil"></i> Edit Info</a>
+                                    <a class="btn btn-default pull-right" ng-if="currentUserIs(user.Id)" ui-sref="layoutMobSocial.twoColumns.editProfile({tab: null})"><i class="fa fa-pencil"></i> Edit Info</a>
                                     <div ng-if="!currentUserIs(user.Id)">
                                         <friend-button class="friend-button" friendstatus="user.FriendStatus" customerid="user.Id"></friend-button>
                                         <span class="vertical-separator"></span>
