datepicker plugin added to app index

--- a/Presentation/mobSocial.WebApp/index.html
+++ b/Presentation/mobSocial.WebApp/index.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="plugins/pace/pace.min.css">
     <!-- select2 -->
     <link rel="stylesheet" href="plugins/select2/select2.min.css">
+    <!-- daterange picker -->
+    <link rel="stylesheet" href="plugins/datepicker/datepicker3.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="themes/admin/AdminLTE/css/AdminLTE.min.css">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
@@ -61,8 +63,10 @@
     <script src="plugins/pace/pace.min.js"></script>
     <!-- select2-->
     <script src="plugins/select2/select2.min.js"></script>
+    <!-- bootstrap datepicker -->
+    <script src="plugins/datepicker/bootstrap-datepicker.js"></script>
     <!-- bootbox-->
-<script src="plugins/bootbox/bootbox.min.js"></script>
+    <script src="plugins/bootbox/bootbox.min.js"></script>
     <script src="scripts/bundles/init.js"></script>
     <!--mobSocial begins now-->
     <script src="scripts/bundles/essentials.bundle.js"></script>
