--- a/Presentation/mobSocial.WebApp/pages/education/education.editor.html
+++ b/Presentation/mobSocial.WebApp/pages/education/education.editor.html
@@ -15,13 +15,13 @@
     <div class="form-group">
         <label for="from-date" class="col-md-3 control-label">From Date</label>
         <div class="col-md-9">
-            <input type="text" rel="datepicker" class="form-control" id="from-date" placeholder="From Date" ng-model="education.FromDate">
+            <input type="text" date-picker class="form-control" id="from-date" placeholder="From Date" ng-model="education.FromDate"/>
         </div>
     </div>
     <div class="form-group">
         <label for="to-date" class="col-md-3 control-label">To Date</label>
         <div class="col-md-9">
-            <input type="text" rel="datepicker" class="form-control" id="to-date" placeholder="To Date" ng-model="education.ToDate">
+            <input type="text" date-picker class="form-control" id="to-date" placeholder="To Date" ng-model="education.ToDate"/>
         </div>
     </div>
     <div class="form-group">
