email templates client pages & scripts added

--- a/Presentation/mobSocial.WebApp/index.html
+++ b/Presentation/mobSocial.WebApp/index.html
@@ -67,6 +67,8 @@
     <script src="plugins/datepicker/bootstrap-datepicker.js"></script>
     <!-- bootbox-->
     <script src="plugins/bootbox/bootbox.min.js"></script>
+    <!-- CK Editor -->
+    <script src="https://cdn.ckeditor.com/4.5.7/standard/ckeditor.js"></script>
     <script src="scripts/bundles/init.js"></script>
     <!--mobSocial begins now-->
     <script src="scripts/bundles/essentials.bundle.js"></script>
