--- a/Presentation/mobSocial.WebApp/pages/emails/emailAccount.list.html
+++ b/Presentation/mobSocial.WebApp/pages/emails/emailAccount.list.html
@@ -1,7 +1,7 @@
 ﻿<div class="box" ng-init="getEmailAccounts()">
     <div class="box-header with-border">
         <h1 class="box-title">
-            Email Settings
+            Email Accounts
         </h1>
         <div class="pull-right">
             <a ui-sref="layoutAdministration.emails.accountedit({ id:0 })" class="btn btn-primary"><i class="fa fa-plus"></i> Add Email Account</a>
